--- a/day03-BOM/04.超时调用计时器.html
+++ b/day03-BOM/04.超时调用计时器.html
@@ -28,15 +28,11 @@
 
 
         //参数1是一个函数
-        /* setTimeout(function () {
-            alert(1);
-        }, 2000); */
+        /* setTimeout(function () {alert(1);}, 2000); */
 
 
         //函数提炼出来
-        function fn() {
-            alert(3);
-        }
+        function fn() {alert(3);}
         setTimeout(fn, 2000)
     </script>
 </body>
