--- a/day03-BOM/15.history/01.html
+++ b/day03-BOM/15.history/01.html
@@ -16,7 +16,7 @@
             history对象：
                 包含了处理浏览器历史记录的方法
                 back():回退一个
-                forword():前进一个
+                forward():前进一个
                 go():里边可以书写数字，表示前进或后退的页数  负数表示后退
         
         */
