--- a/day06-DOM高级/02.侧边栏/02.侧边栏单个.html
+++ b/day06-DOM高级/02.侧边栏/02.侧边栏单个.html
@@ -70,6 +70,35 @@
             <p>我是侧边栏1</p>
         </li>
     </ul>
+    <script>
+        var oLis = document.querySelectorAll('.bar li');
+        var oLisPs = document.querySelectorAll('.bar li p');
+
+        var l = 0; //声明一个初始位置
+        var moveTimer = null;
+        oLis[0].onmouseenter = function () {
+            clearInterval(moveTimer)
+            moveTimer = setInterval(function () {
+                l--;
+                if (l <= -150) {
+                    clearInterval(moveTimer);
+                }
+                oLisPs[0].style.left = l + "px";
+            }, 10)
+        }
+
+
+        oLis[0].onmouseleave = function () {
+            clearInterval(moveTimer);
+            moveTimer = setInterval(function () {
+                l++;
+                if (l >= 0) {
+                    clearInterval(moveTimer);
+                }
+                oLisPs[0].style.left = l + "px";
+            }, 10)
+        }
+    </script>
 </body>
 
 </html>
