--- a/day08-DOM效果/02.自定义滚动条/06.滚轮事件.html
+++ b/day08-DOM效果/02.自定义滚动条/06.滚轮事件.html
@@ -11,7 +11,7 @@
             height: 100px;
             background-color: hotpink;
         }
-    </style>
+    </style>66
 </head>
 
 <body>
@@ -32,7 +32,6 @@
                             上滚：负
                             下滚：正
 
-        
         */
 
         var oBox = document.getElementById('box');
