--- a/day11-JS高级/10.手写new.html
+++ b/day11-JS高级/10.手写new.html
@@ -26,7 +26,7 @@
         console.log(p1)
 
         /* 
-            new做了什么？、
+            new做了什么？
                 1.创建了一个对象
                 2.调用构造函数，并把构造函数的this 指向了这个对象
                 3.对象的隐式原型指向了当前函数的显式原型（构成原型链）在
