--- a/day12-JS高级/05.定时器的思考.html
+++ b/day12-JS高级/05.定时器的思考.html
@@ -20,6 +20,9 @@
         for (var i = 0; i < 1000000000; i++) {
             num += Math.sqrt(i)
         }
+
+
+        alert(1);
     </script>
 </body>
 
