--- a/day12-JS高级/07.Web Worker.html
+++ b/day12-JS高级/07.Web Worker.html
@@ -18,7 +18,7 @@
                 - new Worker():创建一个分线程
                 - postMessage():主线程向分线程，分线程向主线程 传递数据
                 - onmessage事件：分线程或主线程接收到其他线程发送的数据后 自动触发，事件函数的event事件对象中的data属性，就是发送的数据
-
+                - close()方法：在分线程关闭当前线程，terminate()方法：在主线程中关闭某个分线程
             缺点：
                 - 不可以操作DOM
                 - 不能跨域加载js
