--- a/day12-JS高级/09.防抖.html
+++ b/day12-JS高级/09.防抖.html
@@ -36,6 +36,30 @@
                 }, time)
             }
         }
+
+
+
+
+        /* function getData(e) {
+            console.log("ajax请求")
+            console.log(this);
+            console.log(e)
+        }
+
+        oIpt.oninput = debounce(getData, 1300);
+
+        //高阶函数
+        function debounce(fn, time) {
+            var timer = null;
+            return function () {
+                clearTimeout(timer);
+                var that = this;
+                var arg = arguments[0];
+                timer = setTimeout(function () {
+                    fn.call(that, arg)
+                }, time)
+            }
+        } */
     </script>
 </body>
 
