--- a/day12-JS高级/08.手写节流.html
+++ b/day12-JS高级/08.手写节流.html
@@ -69,6 +69,31 @@
                 lastTime = nowTime;
             }
         }
+
+
+
+
+        /* function scroll(e) {
+            cosnole.log(1);
+            console.log(this);
+            console.log(e);
+        }
+        oBox.onscroll = throttle(scroll, 100);
+
+        function throttle(fn, time) {
+            var lastTime = 0;
+            return function () {
+                //看门狗
+                var nowTime = Date.now();
+                if (nowTime - lastTime < time) {
+                    return;
+                }
+
+                //看门狗放行
+                lastTime = nowTime;
+                scroll.call(this, arguments[0])
+            }
+        } */
     </script>
 </body>
 
