--- a/day16-Bootstrap/02.媒介判断.html
+++ b/day16-Bootstrap/02.媒介判断.html
@@ -89,6 +89,18 @@
     <div id="box"></div>
     <div id="con"></div>
     <div id="inner"></div>
+
+    <style>
+        p::first-line {
+            background-color: red;
+        }
+
+        p::first-letter {
+            background-color: yellow;
+        }
+    </style>
+    <p>今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错今天天气真不错
+    </p>
 </body>
 
 </html>
