--- a/day17-ES5+/09.getter和setter.html
+++ b/day17-ES5+/09.getter和setter.html
@@ -48,8 +48,9 @@
                 return this.first + " " + this.last;
             },
             set(value) {
-                this.first = value.split(" ")[0]
-                this.last = value.split(" ")[1];
+                /* this.first = value.split(" ")[0]
+                this.last = value.split(" ")[1]; */
+                [this.first, this.last] = value.split(" ")
             }
         })
 
