--- a/day17-ES5+/19.字符串方法.html
+++ b/day17-ES5+/19.字符串方法.html
@@ -26,6 +26,7 @@
 
         /* 
             判断存在
+                // navigator.userAgent.includes("chrome")
                 indexOf():判断某个值是否存在 如果存在则返回下标 否则返回-1
                 startWith():返回布尔值 判断开头是否包含某个字符串
                 endWidth():返回布尔值 判断结尾是否包含某个字符串
