--- a/day18-ES6+/06.数组的静态方法.html
+++ b/day18-ES6+/06.数组的静态方法.html
@@ -13,6 +13,7 @@
         /* 
             数组的静态方法：
                 - Array.from 把伪数组转为数组
+                    - aArray.prototype.slice.call(obj)
                     - 伪数组：key是从0开始自然递增，并且拥有length属性
         
         
