--- a/day18-ES6+/07.数组的原型方法.html
+++ b/day18-ES6+/07.数组的原型方法.html
@@ -55,8 +55,6 @@
                 flat()：数组扁平化
                     - 参数是一个拉平的层数 
                     - 如果一定要一个完全扁平化数组 则可以直接书写 infinity
-                
-            
             */
             const arr = [1, 2, [3, 4, [5, 6, [7]]]];
             const re = arr.flat(Infinity);
@@ -65,6 +63,7 @@
 
         {
             /* 
+                forEach map some every filter reduce find
                 find()：
                     - 寻找第一个符和条件的数组的值，找到则停止遍历，找不到返回undefined
 
