--- a/day18-ES6+/12.对象的简写.html
+++ b/day18-ES6+/12.对象的简写.html
@@ -16,7 +16,7 @@
         const sex = "nv";
         const obj = {
             name,
-            age,
+            age:18,
             sex
         }
 
